xwayland: Send XdndPosition events as soon as they come in

Technically, we deviate from the recommendations in the spec, but on the
other hand Xwayland runs locally so we don't care about network latency
and it seems that Mutter and wlroots don't care about blocking XdndPosition
client messages either.

BUG: 482298